Update: Refined Utilisateur controller, Helpdesk service, and Dashboard layouts